--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="serp.ico" image="/x-icon">
-    <title>Постсоветское пространоство</title>
+    <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="/serp.ico" image="/x-icon">
+    <title>Страны</title>
 
 </head>
 
@@ -22,7 +22,7 @@
 
         <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi iste itaque aperiam aut dolorem earum
-            inventore distinctio <img src="soviet_200.png"> necessitatibus possimus et laborum explicabo, nisi sed
+            inventore distinctio <img src="/soviet_200.png"> necessitatibus possimus et laborum explicabo, nisi sed
             officia nostrum sint
             suscipit
             optio nihil nobis! Quas est quidem fugiat.
@@ -125,7 +125,7 @@
                 Magnam, dicta atque soluta aspernatur veritatis ullam sit temporibus consequatur provident quod eaque
                 perferendis dolor neque sunt repellat. Officiis voluptatum sunt dolores eum molestias, ut odio velit
                 veritatis eius iste!
-                <img src="serp.ico">
+                <img src="/serp.ico">
                 Officiis sunt adipisci minima eveniet eligendi repellat repudiandae culpa quam unde necessitatibus,
                 voluptatibus veritatis ipsa mollitia laudantium maxime corporis nulla quibusdam fuga. Hic optio sit
                 cupiditate numquam doloremque. Tenetur, delectus?
