--- a/country/index.html
+++ b/country/index.html
@@ -16,10 +16,18 @@
         <a href="/">Постсоветское пространоство</a>
         <a href="#">Последние новости</a>
         <a href="#">Правовая информация</a>
-        <a href="/country/">Страны</a>
+        <a href="/country/" id="id">Страны</a>
         <div>
-            <a href="/country/russia/">Россия</a>
+            <a href="">Азербайджан</a>
+            <a href="">Армения</a>
             <a href="/country/belarus/">Беларусь</a>
+            <a href="">Казахстан</a>
+            <a href="/country/russia/">Российская Федерация</a>
+            <a href="">Украина</a>
+            <a href="">Абхазия</a>
+            <a href="">Южная Осетия</a>
+            <a href="">ДНР</a>
+            <a href="">ЛНР</a>
         </div>
     </header>
     <main>
