--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="/style.css">
     <link rel="shortcut icon" href="/serp.ico" image="/x-icon">
-    <title>Страны</title>
+    <title>Российская Федерация</title>
 
 </head>
 
@@ -17,6 +17,18 @@
         <a href="#">Последние новости</a>
         <a href="#">Правовая информация</a>
         <a href="/country/">Страны</a>
+        <div>
+            <a href="">Азербайджан</a>
+            <a href="">Армения</a>
+            <a href="/country/belarus/">Беларусь</a>
+            <a href="">Казахстан</a>
+            <a href="/country/russia/" id="id">Российская Федерация</a>
+            <a href="">Украина</a>
+            <a href="">Абхазия</a>
+            <a href="">Южная Осетия</a>
+            <a href="">ДНР</a>
+            <a href="">ЛНР</a>
+        </div>
     </header>
     <main>
 
