--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -16,18 +16,18 @@
         <a href="/">Постсоветское пространоство</a>
         <a href="#">Последние новости</a>
         <a href="#">Правовая информация</a>
-        <a href="/country/">Страны</a>
+        <a href="/country/" id="id">Страны</a>
         <div>
-            <a href="">Азербайджан</a>
-            <a href="">Армения</a>
+            <a href="/country/azerbaijan/">Азербайджан</a>
+            <a href="/country/armenia/">Армения</a>
             <a href="/country/belarus/" id="id">Беларусь</a>
-            <a href="">Казахстан</a>
-            <a href="/country/russia/" >Российская Федерация</a>
-            <a href="">Украина</a>
-            <a href="">Абхазия</a>
-            <a href="">Южная Осетия</a>
-            <a href="">ДНР</a>
-            <a href="">ЛНР</a>
+            <a href="/country/kazakhstan/">Казахстан</a>
+            <a href="/country/russia/">Российская Федерация</a>
+            <a href="/country/ukraine/">Украина</a>
+            <a href="/country/abkhazia/">Абхазия</a>
+            <a href="/country/south-ossetia/">Южная Осетия</a>
+            <a href="/country/dni/">ДНР</a>
+            <a href="/country/lnr/">ЛНР</a>
         </div>
     </header>
     <main>
