--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="/style.css">
     <link rel="shortcut icon" href="/serp.ico" image="/x-icon">
-    <title>Российская Федерация</title>
+    <title>Государственная символика | Российская Федерация</title>
 
 </head>
 
@@ -30,8 +30,8 @@
             <a href="/country/lnr/">ЛНР</a>
         </div>
         <div id="nav-country">
-            <a href="/country/russia/" id="id">Основная информация</a>
-            <a href="/country/russia/gos-simvolika/">Государственная символика</a>
+            <a href="/country/russia/" >Основная информация</a>
+            <a href="/country/russia/gos-simvolika/" id="id">Государственная символика</a>
         </div>
     </header>
     <main>
