--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -41,11 +41,12 @@
         <p>
             Государственный герб Российской Федерации представляет собой четырёхугольный, с закруглёнными нижними
             углами, заострённый в оконечности красный геральдический щит с золотым двуглавым орлом, поднявшим вверх
-            расправленные крылья. <img src="/country/russia/gos-simvolika/gerb-of-Russia.png"> Орёл увенчан двумя малыми коронами и — над ними — одной большой короной, соединёнными
+            расправленные крылья. <img src="/country/russia/gos-simvolika/gerb-of-Russia.png"> Орёл увенчан двумя малыми
+            коронами и — над ними — одной большой короной, соединёнными
             лентой. В правой лапе орла — скипетр, в левой — держава. На груди орла, в красном щите, — серебряный всадник
             в синем плаще на серебряном коне, поражающий серебряным копьём чёрного, опрокинутого навзничь и попранного
             конём дракона.
-            
+
 
         </p>
         <br>
@@ -101,14 +102,21 @@
             — оба исполнения являются равноценными. При исполнении гимна без слов обыкновенно звучат только первый
             куплет и припев.
         </p>
+        <br>
+        <h3>Гимн России инструментал</h3>
         <audio controls>
-            
             <source src="/country/russia/gos-simvolika/anthem-instrumental.mp3" type="audio/mpeg">
-            Тег audio не поддерживается вашим браузером. 
+            Тег audio не поддерживается вашим браузером.
             <a href="/country/russia/gos-simvolika/anthem-instrumental.mp3">Скачайте музыку</a>.
-          </audio>
-
-
+        </audio>
+        <br>
+        <br>
+        <h3>Гимн России хор</h3>
+        <audio controls>
+            <source src="/country/russia/gos-simvolika/anthem-choir.mp3" type="audio/mpeg">
+            Тег audio не поддерживается вашим браузером.
+            <a href="/country/russia/gos-simvolika/anthem-choir.mp3">Скачайте музыку</a>.
+        </audio>
     </main>
     <footer>
         <a href="#">Контакты</a>
