--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -52,6 +52,7 @@
         <br>
         <br>
         <br>
+        <br>
 
         <h2>Флаг России</h2>
         <hr>
@@ -62,9 +63,10 @@
         </p>
         <p>
             Флаг России описан как «прямоугольное полотнище из трёх равновеликих горизонтальных полос: верхней — белого,
-            средней — синего и нижней — красного цвета. Отношение ширины флага к его длине — 2:3» . Оттенки цветов не
+            средней — синего и нижней — красного цвета. <img src="/country/russia/gos-simvolika/flag-of-Russia.png"> Отношение ширины флага к его длине — 2:3» . Оттенки цветов не
             были установлены, потому что Федеральный конституционный закон о Государственном флаге Российской
             Федерации оттенки цветов не устанавливаеть.
+
 
 
         </p>
