--- a/country/index.html
+++ b/country/index.html
@@ -335,7 +335,7 @@
 
     </main>
     <footer>
-        <a href="#">Контакты</a>
+        <a href="/contacts/">Контакты</a>
         <a href="#">Поддежка</a>
         <a href="#"></a>
     </footer>
