--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="/serp.ico" image="/x-icon">
+    <link rel="shortcut icon" href="/country/russia/gos-simvolika/gerb-of-Russia.png" image="/x-icon">
     <title>Государственная символика | Российская Федерация</title>
 
 </head>
@@ -106,7 +106,7 @@
         </p>
         <br>
         <h3>Гимн России инструментал</h3>
-        <audio controls>
+        <audio controls loop>
             <source src="/country/russia/gos-simvolika/anthem-instrumental.mp3" type="audio/mpeg">
             Тег audio не поддерживается вашим браузером.
             <a href="/country/russia/gos-simvolika/anthem-instrumental.mp3">Скачайте музыку</a>.
@@ -121,9 +121,7 @@
         </audio>
     </main>
     <footer>
-        <a href="#">Контакты</a>
-        <a href="#">Поддежка</a>
-        <a href="#"></a>
+        <a href="/contacts/">Поддержка</a>
     </footer>
 
 </body>
