--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="/serp.ico" image="/x-icon">
+    <link rel="shortcut icon" href="/country/russia/gos-simvolika/gerb-of-Russia.png" image="/x-icon">
     <title>Российская Федерация</title>
 
 </head>
