--- a/index.html
+++ b/index.html
@@ -323,9 +323,7 @@
 
     </main>
     <footer>
-        <a href="#">Контакты</a>
-        <a href="#">Поддежка</a>
-        <a href="#"></a>
+        <a href="/contacts/">Поддежка</a>
     </footer>
 
 </body>
