--- a/country/index.html
+++ b/country/index.html
@@ -15,7 +15,6 @@
     <header>
         <a href="/">Постсоветское пространоство</a>
         <a href="#">Последние новости</a>
-        <a href="#">Правовая информация</a>
         <a href="/country/" id="id">Страны</a>
         <div>
             <a href="/country/azerbaijan/">Азербайджан</a>
@@ -335,9 +334,8 @@
 
     </main>
     <footer>
-        <a href="/contacts/">Контакты</a>
-        <a href="#">Поддежка</a>
-        <a href="#"></a>
+        <a href="/contacts/">Поддержка</a>
+        <a href="/legal/">Правовая информация</a>
     </footer>
 
 </body>
