--- a/country/lnr/index.html
+++ b/country/lnr/index.html
@@ -15,7 +15,6 @@
     <header>
         <a href="/">Постсоветское пространоство</a>
         <a href="#">Последние новости</a>
-        <a href="#">Правовая информация</a>
         <a href="/country/" id="id">Страны</a>
         <div>
             <a href="/country/azerbaijan/">Азербайджан</a>
@@ -34,7 +33,7 @@
 
         <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi iste itaque aperiam aut dolorem earum
-            inventore distinctio <img src=".soviet_200.png"> necessitatibus possimus et laborum explicabo, nisi sed
+            inventore distinctio <img src="/soviet_200.png"> necessitatibus possimus et laborum explicabo, nisi sed
             officia nostrum sint
             suscipit
             optio nihil nobis! Quas est quidem fugiat.
@@ -335,9 +334,8 @@
 
     </main>
     <footer>
-        <a href="#">Контакты</a>
-        <a href="#">Поддежка</a>
-        <a href="#"></a>
+        <a href="/contacts/">Поддержка</a>
+        <a href="/legal/">Правовая информация</a>
     </footer>
 
 </body>
