--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -15,7 +15,6 @@
     <header>
         <a href="/">Постсоветское пространоство</a>
         <a href="#">Последние новости</a>
-        <a href="#">Правовая информация</a>
         <a href="/country/" id="id">Страны</a>
         <div>
             <a href="/country/azerbaijan/">Азербайджан</a>
@@ -32,6 +31,7 @@
         <div id="nav-country">
             <a href="/country/russia/" id="id">Основная информация</a>
             <a href="/country/russia/gos-simvolika/">Государственная символика</a>
+            <a href="/country/russia/info">Последняя информация</a>
         </div>
     </header>
     <main>
@@ -192,15 +192,15 @@
                 Vel, eum! In nihil quis quaerat reiciendis repellendus doloremque, voluptatum corrupti aspernatur rem
                 eum dicta qui! Ex alias voluptates iure dignissimos quo corrupti quaerat, placeat, ratione itaque,
                 magnam ipsam quam!
-
+            </i>
+        </p>
 
 
 
     </main>
     <footer>
-        <a href="#">Контакты</a>
-        <a href="#">Поддежка</a>
-        <a href="#"></a>
+        <a href="/contacts/">Поддержка</a>
+        <a href="/legal/">Правовая информация</a>
     </footer>
 
 </body>
