--- a/country/ukraine/gos-simvolika/index.html
+++ b/country/ukraine/gos-simvolika/index.html
@@ -29,8 +29,8 @@
             <a href="/country/lnr/">ЛНР</a>
         </div>
         <div id="nav-country">
-            <a href="/country/russia/">Основная информация</a>
-            <a href="/country/russia/gos-simvolika/" id="id">Государственная символика</a>
+            <a href="/country/ukraine/">Основная информация</a>
+            <a href="/country/ukraine/gos-simvolika/" id="id">Государственная символика</a>
         </div>
     </header>
     <main>
@@ -40,7 +40,7 @@
         <p>
             Государственный герб Российской Федерации представляет собой четырёхугольный, с закруглёнными нижними
             углами, заострённый в оконечности красный геральдический щит с золотым двуглавым орлом, поднявшим вверх
-            расправленные крылья. <img src="/country/russia/gos-simvolika/gerb-of-Russia.png"> Орёл увенчан двумя малыми
+            расправленные крылья. Орёл увенчан двумя малыми
             коронами и — над ними — одной большой короной, соединёнными
             лентой. В правой лапе орла — скипетр, в левой — держава. На груди орла, в красном щите, — серебряный всадник
             в синем плаще на серебряном коне, поражающий серебряным копьём чёрного, опрокинутого навзничь и попранного
@@ -53,7 +53,7 @@
         <br>
         <br>
 
-        <h2>Флаг России</h2>
+        <h2>Флаг Украины</h2>
         <hr>
         <br>
         <p>
@@ -62,7 +62,7 @@
         </p>
         <p>
             Флаг России описан как «прямоугольное полотнище из трёх равновеликих горизонтальных полос: верхней — белого,
-            средней — синего и нижней — красного цвета. <img src="/country/russia/gos-simvolika/flag-of-Russia.png"> Отношение ширины флага к его длине — 2:3» . Оттенки цветов не
+            средней — синего и нижней — красного цвета. Отношение ширины флага к его длине — 2:3» . Оттенки цветов не
             были установлены, потому что Федеральный конституционный закон о Государственном флаге Российской
             Федерации оттенки цветов не устанавливаеть.
 
@@ -89,7 +89,7 @@
         <br>
         <br>
         <br>
-        <h2>Гимн России</h2>
+        <h2>Гимн Украины</h2>
         <hr>
         <br>
         <p>
@@ -104,20 +104,6 @@
             куплет и припев.
         </p>
         <br>
-        <h3>Гимн России инструментал</h3>
-        <audio controls loop>
-            <source src="/country/russia/gos-simvolika/anthem-instrumental.mp3" type="audio/mpeg">
-            Тег audio не поддерживается вашим браузером.
-            <a href="/country/russia/gos-simvolika/anthem-instrumental.mp3">Скачайте музыку</a>.
-        </audio>
-        <br>
-        <br>
-        <h3>Гимн России хор</h3>
-        <audio controls>
-            <source src="/country/russia/gos-simvolika/anthem-choir.mp3" type="audio/mpeg">
-            Тег audio не поддерживается вашим браузером.
-            <a href="/country/russia/gos-simvolika/anthem-choir.mp3">Скачайте музыку</a>.
-        </audio>
     </main>
     <footer>
         <a href="/contacts/">Поддержка</a>
