--- a/country/ukraine/index.html
+++ b/country/ukraine/index.html
@@ -15,7 +15,6 @@
     <header>
         <a href="/">Постсоветское пространоство</a>
         <a href="#">Последние новости</a>
-        <a href="#">Правовая информация</a>
         <a href="/country/" id="id">Страны</a>
         <div>
             <a href="/country/azerbaijan/">Азербайджан</a>
@@ -28,6 +27,11 @@
             <a href="/country/south-ossetia/">Южная Осетия</a>
             <a href="/country/dni/">ДНР</a>
             <a href="/country/lnr/">ЛНР</a>
+
+        </div>
+        <div id="nav-country">
+            <a href="/country/ukraine/" id="id">Основная информация</a>
+            <a href="/country/ukraine/gos-simvolika/">Государственная символика</a>
         </div>
     </header>
     <main>
@@ -335,9 +339,8 @@
 
     </main>
     <footer>
-        <a href="#">Контакты</a>
-        <a href="#">Поддежка</a>
-        <a href="#"></a>
+        <a href="/contacts/">Поддержка</a>
+        <a href="/legal/">Правовая информация</a>
     </footer>
 
 </body>
