--- a/country/armenia/index.html
+++ b/country/armenia/index.html
@@ -15,7 +15,6 @@
     <header>
         <a href="/">Постсоветское пространоство</a>
         <a href="#">Последние новости</a>
-        <a href="#">Правовая информация</a>
         <a href="/country/" id="id">Страны</a>
         <div>
             <a href="/country/azerbaijan/">Азербайджан</a>
@@ -99,96 +98,6 @@
             repudiandae maxime esse.
         </p>
         <p>
-            <i>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique quisquam facere beatae! Sed nostrum,
-                esse facilis inventore nemo quos? Saepe quos repellendus quasi dicta! Quos commodi voluptatum ea
-                excepturi? Tempore.
-                Maxime, quidem? Inventore aperiam doloribus nesciunt deleniti blanditiis corrupti totam nihil itaque
-                architecto, laudantium non sequi a rerum esse, magni explicabo labore enim molestiae numquam doloremque
-                in voluptates. Culpa, voluptatum!
-                Eligendi, debitis perferendis a quam sunt illum itaque, sit temporibus vel placeat quos delectus aperiam
-                et. Iste minus voluptatibus velit porro quia libero eligendi omnis, sequi maxime soluta est blanditiis!
-                Consequatur veritatis rerum praesentium architecto omnis illum ratione, soluta asperiores veniam minima
-                atque dolor maiores corrupti ad distinctio sint in, commodi explicabo at et iste reprehenderit. Maxime
-                mollitia blanditiis asperiores.
-                Facilis rem, hic cum commodi provident consequuntur fugiat harum officia, distinctio quia labore
-                delectus! Sequi consequuntur officiis omnis nam deserunt itaque architecto numquam dolorem? Consequatur
-                officia debitis et deleniti iure.
-                Excepturi distinctio sequi voluptatum consequatur, deleniti ea repudiandae tempora corrupti accusamus
-                unde dolore fugit recusandae, quae deserunt dolores impedit fugiat dicta. Consequuntur architecto quod
-                delectus ad illo consequatur adipisci enim.
-                Doloribus saepe sint excepturi quibusdam, magni deleniti repellendus alias facere. Repellendus itaque,
-                nemo in laborum nisi vitae praesentium quo, libero maiores sint magnam molestiae commodi quaerat quam!
-                Dicta, repudiandae quas.
-                Molestias necessitatibus alias illo consequatur ab tempore cupiditate saepe praesentium eveniet omnis,
-                eaque ad sapiente quod corporis architecto ratione pariatur quas beatae, incidunt fuga placeat velit
-                quisquam. Minima, omnis fugiat?
-                Ipsa, dolore. Dolore distinctio culpa doloribus aspernatur id pariatur fugit praesentium ipsam nobis, ea
-                earum repudiandae perferendis expedita ex minus explicabo aliquid quam commodi recusandae, est amet a.
-                Amet, aut!
-                Repudiandae reprehenderit facilis maiores quidem quasi minima odit tempore a repellendus labore beatae,
-                qui commodi, eos unde rem asperiores blanditiis! Quo corrupti, voluptatibus illum tempora optio aliquid
-                odio harum explicabo?
-                Dicta consequatur in cumque quae, sit ullam nulla, vel quas, nemo vero non. Placeat molestias eos atque
-                nisi. Maxime molestias beatae ab iure officiis, nobis qui? Illum incidunt possimus molestias.
-                Ex voluptatem dicta eum reprehenderit vitae officiis suscipit accusantium temporibus magni dignissimos,
-                molestiae vero saepe amet dolore ipsa, at hic aspernatur provident autem distinctio dolor? Sapiente
-                numquam at alias tempora!
-                Magnam, dicta atque soluta aspernatur veritatis ullam sit temporibus consequatur provident quod eaque
-                perferendis dolor neque sunt repellat. Officiis voluptatum sunt dolores eum molestias, ut odio velit
-                veritatis eius iste!
-                <img src="/serp.ico">
-                Officiis sunt adipisci minima eveniet eligendi repellat repudiandae culpa quam unde necessitatibus,
-                voluptatibus veritatis ipsa mollitia laudantium maxime corporis nulla quibusdam fuga. Hic optio sit
-                cupiditate numquam doloremque. Tenetur, delectus?
-                Aspernatur beatae rem illum eius dignissimos, saepe dolore ducimus minima facilis optio possimus
-                accusantium, unde est. Totam, debitis obcaecati neque non iure corrupti voluptatibus aut, repellendus,
-                molestias ad maiores enim!
-                Dolore sapiente molestias minus fugiat ad eligendi aut deserunt temporibus est ducimus quisquam et odio,
-                id nobis architecto. Numquam vel cumque facere ipsum, maiores illum minus adipisci nam aut reiciendis?
-                Quisquam, atque dolorum, saepe hic possimus consectetur sed exercitationem vero laboriosam, inventore
-                impedit odio fuga. Natus numquam id animi, recusandae inventore aspernatur eveniet quibusdam magni
-                consectetur corrupti expedita et praesentium!
-                Dolores voluptatibus magni praesentium, totam est nobis numquam nisi quisquam sapiente saepe
-                necessitatibus, enim earum! Pariatur, architecto reiciendis perferendis vero commodi eligendi magni
-                veniam et ducimus dolorum! Voluptas, quidem sapiente!
-                Provident debitis perspiciatis fugiat alias cupiditate hic ullam quidem quisquam obcaecati? Nihil
-                officiis explicabo quam! Quas aliquam ullam optio illo eligendi, in recusandae ad provident, ipsa eius
-                aperiam maiores repudiandae!
-                Enim excepturi in debitis sed cupiditate mollitia, fugit quis quidem quia veniam ut impedit temporibus
-                non quibusdam facilis hic. Culpa maxime recusandae velit molestiae a, illo repellendus quibusdam nam
-                sint.
-                Sunt odio necessitatibus tempore itaque esse unde vel repellat architecto minima libero quas ut
-                perferendis, eaque quam. Aliquid laboriosam exercitationem ut consectetur fuga doloribus, deleniti sequi
-                pariatur veritatis quibusdam eveniet.
-                Similique provident deserunt id vel cum voluptatibus voluptatem velit quas dolor reiciendis excepturi in
-                repellat odio, officiis laboriosam dolore suscipit eius eaque ipsum nihil deleniti unde amet
-                consequatur? Praesentium, cum.
-                Eum doloremque consectetur recusandae id corporis vitae, vero ullam reiciendis illo cupiditate aut sequi
-                saepe, nihil necessitatibus, adipisci est? Porro pariatur laborum, cupiditate quos provident iusto odit
-                illo ipsam quo.
-                Quam quia nobis quo cum? Nihil, eos quibusdam impedit dicta quae, ab, perspiciatis ea error provident
-                exercitationem hic quasi similique nostrum numquam. Quidem sapiente eos aperiam beatae voluptatibus
-                dicta recusandae.
-                Accusamus dicta aliquam incidunt a, quam accusantium voluptatem adipisci necessitatibus recusandae at
-                magnam cumque magni? Dolor magnam labore nesciunt est ipsam possimus recusandae tenetur, accusantium
-                esse deleniti suscipit consectetur cupiditate.
-                Soluta nesciunt consequatur qui consectetur asperiores voluptas iure nihil commodi, delectus,
-                reprehenderit corporis ullam nemo unde ab placeat ipsa? Nulla eligendi at ipsa consequuntur ab numquam
-                blanditiis. Quia, facere voluptatem.
-                Perferendis, nostrum ullam ipsa, praesentium omnis itaque magni dolorem excepturi quos aliquam nemo
-                minima libero aliquid enim dolor eligendi aperiam eius quae tempore odio labore velit molestiae
-                reiciendis? Ullam, deleniti.
-                Laboriosam sint tempora neque, ad doloribus modi sequi quos impedit vero repudiandae hic optio
-                consequuntur? Saepe at quo labore harum, dolorem deserunt praesentium debitis maiores, odio veritatis
-                dolorum nihil doloribus.
-                Ullam error optio sint saepe laborum deleniti omnis, iste, laudantium aliquam dignissimos expedita.
-                Fugit voluptas quibusdam sed omnis qui illo, totam cupiditate ab facilis ut labore nesciunt, laudantium,
-                earum nisi.
-                Vel, eum! In nihil quis quaerat reiciendis repellendus doloremque, voluptatum corrupti aspernatur rem
-                eum dicta qui! Ex alias voluptates iure dignissimos quo corrupti quaerat, placeat, ratione itaque,
-                magnam ipsam quam!
-            </i>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem rerum at fugiat quis ullam esse nisi non
             ipsum labore veritatis numquam reiciendis, quae dolorum illum, obcaecati provident sequi repellendus ipsa.
             Odio doloremque consequuntur, quae non officiis voluptatibus, obcaecati repudiandae labore iusto inventore
@@ -335,9 +244,8 @@
 
     </main>
     <footer>
-        <a href="#">Контакты</a>
-        <a href="#">Поддежка</a>
-        <a href="#"></a>
+        <a href="/contacts/">Поддержка</a>
+        <a href="/legal/">Правовая информация</a>
     </footer>
 
 </body>
