--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <header>
         <a href="/">Постсоветское пространоство</a>
         <a href="#">Последние новости</a>
-        <a href="#">Правовая информация</a>
         <a href="/country/">Страны</a>
     </header>
     <main>
@@ -323,7 +322,8 @@
 
     </main>
     <footer>
-        <a href="/contacts/">Поддежка</a>
+        <a href="/contacts/">Поддержка</a>
+        <a href="/legal/">Правовая информация</a>
     </footer>
 
 </body>
