--- a/country/ukraine/gos-simvolika/index.html
+++ b/country/ukraine/gos-simvolika/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="/country/russia/gos-simvolika/gerb-of-Russia.png" image="/x-icon">
+    <link rel="shortcut icon" href="/country/ukraine/gos-simvolika/gerb-of-ukraine.png" image="/x-icon">
     <title>Государственная символика | Российская Федерация</title>
 
 </head>
@@ -21,8 +21,8 @@
             <a href="/country/armenia/">Армения</a>
             <a href="/country/belarus/">Беларусь</a>
             <a href="/country/kazakhstan/">Казахстан</a>
-            <a href="/country/russia/" id="id">Российская Федерация</a>
-            <a href="/country/ukraine/">Украина</a>
+            <a href="/country/russia/">Российская Федерация</a>
+            <a href="/country/ukraine/" id="id">Украина</a>
             <a href="/country/abkhazia/">Абхазия</a>
             <a href="/country/south-ossetia/">Южная Осетия</a>
             <a href="/country/dni/">ДНР</a>
@@ -38,15 +38,16 @@
         <hr>
         <br>
         <p>
-            Государственный герб Российской Федерации представляет собой четырёхугольный, с закруглёнными нижними
-            углами, заострённый в оконечности красный геральдический щит с золотым двуглавым орлом, поднявшим вверх
-            расправленные крылья. Орёл увенчан двумя малыми
-            коронами и — над ними — одной большой короной, соединёнными
-            лентой. В правой лапе орла — скипетр, в левой — держава. На груди орла, в красном щите, — серебряный всадник
-            в синем плаще на серебряном коне, поражающий серебряным копьём чёрного, опрокинутого навзничь и попранного
-            конём дракона.
-
-
+            Герб Украи́ны (укр. Герб України) — один из трёх официальных символов государства, наряду с флагом и
+            гимном. Состоит из Малого и Большого гербов. В настоящее время используется в основном только Малый герб,
+            <img src="/country/ukraine/gos-simvolika/gerb-of-ukraine.png" alt="" >
+            утверждённый 19 февраля 1992 года.
+        </p>
+        <br>
+        <p>
+            Центральной геральдической фигурой обоих гербов является «трезубец» (укр. тризуб) князя Владимира. Кроме
+            того, элементами Большого герба должны быть также казак с мушкетом (символ Войска
+            Запорожского) и коронованный лев (герб Галицкой Руси).
         </p>
         <br>
         <br>
@@ -57,34 +58,13 @@
         <hr>
         <br>
         <p>
-            Государственный флаг — это опознавательный знак государства, исполняет ту же функцию, что и государственный
-            герб, государственный гимн и название страны, — он обозначает свою страну, отличает её от других стран.
-        </p>
-        <p>
-            Флаг России описан как «прямоугольное полотнище из трёх равновеликих горизонтальных полос: верхней — белого,
-            средней — синего и нижней — красного цвета. Отношение ширины флага к его длине — 2:3» . Оттенки цветов не
-            были установлены, потому что Федеральный конституционный закон о Государственном флаге Российской
-            Федерации оттенки цветов не устанавливаеть.
-
-
-
-        </p>
-        <br>
-        <br>
-        <h3>Использование флага России</h3>
-        <br>
-        <p>Порядок использования государственного флага определяется Федеральным законом. Законом описаны случаи, в
-            которых флаг должен использоваться обязательно: он помещается на зданиях, в которых располагаются органы
-            власти (Президент Российской Федерации, Федеральное Собрание, правительство, федеральные министерства и
-            ведомства и их отделения, органы власти субъектов Российской Федерации — республик, краев, областей,
-            автономных округов, органы местного самоуправления муниципальных образований — городов, районов и сельских
-            поселений), в рабочих кабинетах руководителей органов власти, на зданиях представительств России за рубежом,
-            на российских кораблях и судах. Российский флаг каждый день поднимается в воинских частях нашей армии. Флаг
-            изображается на воздушных судах (самолётах и вертолётах), российских космических аппаратах. В дни праздников
-            и важных событий государственный флаг украшает улицы и площади. Закон устанавливает случаи, когда и кем флаг
-            должен использоваться обязательно. Существуют три основных способа применения флагов: флаг может быть
-            поднят, вывешен (установлен) или растянут. Существует ещё немало тонкостей в правилах использования флагов,
-            общий свод которых называется флажным протоколом.
+            официальный государственный символ Украины (наряду с гербом и гимном), а также один из национальных
+            символов украинцев.
+            Представляет собой прямоугольное полотнище из двух <img
+                src="/country/ukraine/gos-simvolika/flag-of-ukraine.png"> равновеликих горизонтальных полос: верхней —
+            синего и
+            нижней — жёлтого цвета. Отношение ширины флага к его длине 2:3. Часто на практике оттенок синего может
+            отличаться как в сторону голубого, так и в сторону тёмно-синего.
         </p>
         <br>
         <br>
@@ -93,17 +73,16 @@
         <hr>
         <br>
         <p>
-            Государственный гимн Российской Федерации представляет собой песню, музыку к которой написал композитор А.
-            В. Александров, а слова — поэт С. В. Михалков. Сама музыка и основа текста были позаимствованы из гимна
-            Советского Союза.
-        </p>
-        <p>
-
-            Гимн имеет три куплета, после которых трижды исполняется припев. Гимн может звучать со словами или без слов
-            — оба исполнения являются равноценными. При исполнении гимна без слов обыкновенно звучат только первый
-            куплет и припев.
+            Государственным гимном Украины является песня «Ще не вмерла України і Слава, і Воля», музыку к которой
+            написал Михаил Вербицкий, а слова Павел Чубинский. Гимн утверждён 15 января 1992, современный текст
+            утверждён 6 марта 2003 года.
         </p>
         <br>
+        <audio controls>
+            <source src="/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3" type="audio/mpeg">
+            Тег audio не поддерживается вашим браузером.
+            <a href="/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3">Скачайте музыку</a>.
+        </audio>
     </main>
     <footer>
         <a href="/contacts/">Поддержка</a>
