--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -62,7 +62,8 @@
         </p>
         <p>
             Флаг России описан как «прямоугольное полотнище из трёх равновеликих горизонтальных полос: верхней — белого,
-            средней — синего и нижней — красного цвета. <img src="/country/russia/gos-simvolika/flag-of-Russia.png"> Отношение ширины флага к его длине — 2:3» . Оттенки цветов не
+            средней — синего и нижней — красного цвета. <img src="/country/russia/gos-simvolika/flag-of-Russia.png">
+            Отношение ширины флага к его длине — 2:3» . Оттенки цветов не
             были установлены, потому что Федеральный конституционный закон о Государственном флаге Российской
             Федерации оттенки цветов не устанавливаеть.
 
@@ -103,6 +104,40 @@
             — оба исполнения являются равноценными. При исполнении гимна без слов обыкновенно звучат только первый
             куплет и припев.
         </p>
+        <br>
+
+        <h3>Текст гимна Российской Федерации</h3>
+        <i>
+            <p id="gimn">Россия — священная наша держава,</p>
+            <p id="gimn">Россия — любимая наша страна.</p>
+            <p id="gimn">Могучая воля, великая слава —</p>
+            <p id="gimn">Твоё достоянье на все времена!</p>
+            <br>
+            <p id="gimn">Славься, Отечество наше свободное,</p>
+            <p id="gimn">Братских народов союз вековой,</p>
+            <p id="gimn">Предками данная мудрость народная!</p>
+            <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
+            <br>
+            <p id="gimn">От южных морей до полярного края</p>
+            <p id="gimn">Раскинулись наши леса и поля.</p>
+            <p id="gimn">Одна ты на свете! Одна ты такая —</p>
+            <p id="gimn">Хранимая Богом родная земля!</p>
+            <br>
+            <p id="gimn">Славься, Отечество наше свободное,</p>
+            <p id="gimn">Братских народов союз вековой,</p>
+            <p id="gimn">Предками данная мудрость народная!</p>
+            <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
+            <br>
+            <p id="gimn">Широкий простор для мечты и для жизни</p>
+            <p id="gimn">Грядущие нам открывают года.</p>
+            <p id="gimn">Нам силу даёт наша верность Отчизне.</p>
+            <p id="gimn">Так было, так есть и так будет всегда!</p>
+            <br>
+            <p id="gimn">Славься, Отечество наше свободное,</p>
+            <p id="gimn">Братских народов союз вековой,</p>
+            <p id="gimn">Предками данная мудрость народная!</p>
+            <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
+        </i>
         <br>
         <h3>Гимн России инструментал</h3>
         <audio controls loop>
