--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -141,7 +141,7 @@
                 Magnam, dicta atque soluta aspernatur veritatis ullam sit temporibus consequatur provident quod eaque
                 perferendis dolor neque sunt repellat. Officiis voluptatum sunt dolores eum molestias, ut odio velit
                 veritatis eius iste!
-                <img src="/serp.ico">
+                <img src="/serp.ico" id="lol">
                 Officiis sunt adipisci minima eveniet eligendi repellat repudiandae culpa quam unde necessitatibus,
                 voluptatibus veritatis ipsa mollitia laudantium maxime corporis nulla quibusdam fuga. Hic optio sit
                 cupiditate numquam doloremque. Tenetur, delectus?
