--- a/country/ukraine/gos-simvolika/index.html
+++ b/country/ukraine/gos-simvolika/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="/country/ukraine/gos-simvolika/gerb-of-ukraine.png" image="/x-icon">
+    <link rel="shortcut icon" href="/country/ukraine/gerb-of-ukraine.png" image="/x-icon">
     <title>Государственная символика | Украина</title>
 
 </head>
@@ -34,13 +34,13 @@
         </div>
     </header>
     <main>
-        <h2>Греб России</h2>
+        <h2>Греб Украины</h2>
         <hr>
         <br>
         <p>
             Герб Украи́ны (укр. Герб України) — один из трёх официальных символов государства, наряду с флагом и
             гимном. Состоит из Малого и Большого гербов. В настоящее время используется в основном только Малый герб,
-            <img src="/country/ukraine/gos-simvolika/gerb-of-ukraine.png" alt="">
+            <img src="/country/ukraine/gerb-of-ukraine.png" alt="">
             утверждённый 19 февраля 1992 года.
         </p>
         <br>
@@ -61,7 +61,7 @@
             официальный государственный символ Украины (наряду с гербом и гимном), а также один из национальных
             символов украинцев.
             Представляет собой прямоугольное полотнище из двух <img
-                src="/country/ukraine/gos-simvolika/flag-of-ukraine.png"> равновеликих горизонтальных полос: верхней —
+                src="/country/ukraine/flag-of-ukraine.png"> равновеликих горизонтальных полос: верхней —
             синего и
             нижней — жёлтого цвета. Отношение ширины флага к его длине 2:3. Часто на практике оттенок синего может
             отличаться как в сторону голубого, так и в сторону тёмно-синего.
@@ -77,37 +77,6 @@
             написал Михаил Вербицкий, а слова Павел Чубинский. Гимн утверждён 15 января 1992, современный текст
             утверждён 6 марта 2003 года.
         </p>
-        <div id="gimn">
-            Россия — священная наша держава,
-            Россия — любимая наша страна.
-            Могучая воля, великая слава —
-            Твоё достоянье на все времена!
-
-            Славься, Отечество наше свободное,
-            Братских народов союз вековой,
-            Предками данная мудрость народная!
-            Славься, страна! Мы гордимся тобой!
-
-            От южных морей до полярного края
-            Раскинулись наши леса и поля.
-            Одна ты на свете! Одна ты такая —
-            Хранимая Богом родная земля!
-
-            Славься, Отечество наше свободное,
-            Братских народов союз вековой,
-            Предками данная мудрость народная!
-            Славься, страна! Мы гордимся тобой!
-
-            Широкий простор для мечты и для жизни
-            Грядущие нам открывают года.
-            Нам силу даёт наша верность Отчизне.
-            Так было, так есть и так будет всегда!
-
-            Славься, Отечество наше свободное,
-            Братских народов союз вековой,
-            Предками данная мудрость народная!
-            Славься, страна! Мы гордимся тобой!
-        </div>
         <br>
         <audio controls>
             <source src="/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3" type="audio/mpeg">
