--- a/country/ukraine/index.html
+++ b/country/ukraine/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="/serp.ico" image="/x-icon">
+    <link rel="shortcut icon" href="/country/ukraine/gerb-of-ukraine.png" image="/x-icon">
     <title>Украина</title>
 
 </head>
