--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="/country/russia/gos-simvolika/gerb-of-Russia.png" image="/x-icon">
+    <link rel="shortcut icon" href="gerb-of-Russia.png" image="/x-icon">
     <title>Государственная символика | Российская Федерация</title>
 
 </head>
@@ -34,7 +34,7 @@
         </div>
     </header>
     <main>
-        <h2>Греб России</h2>
+        <h2>Герб России</h2>
         <hr>
         <br>
         <p>
