--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="/style.css">
     <link rel="shortcut icon" href="/country/russia/gos-simvolika/gerb-of-Russia.png" image="/x-icon">
     <title>Российская Федерация</title>
@@ -42,7 +41,6 @@
             officia nostrum sint
             suscipit
             optio nihil nobis! Quas est quidem fugiat.
-
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut soluta itaque suscipit nisi aspernatur aliquid,
             laborum ullam nobis, eaque facere alias placeat eum. Placeat tempora, eaque qui libero est necessitatibus.
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus quibusdam consectetur exercitationem
@@ -53,9 +51,10 @@
             accusantium beatae dicta nesciunt.
             Nihil cupiditate mollitia asperiores. Cum molestias repellat ratione deleniti! Fuga nostrum illum culpa
             officiis quod ad, incidunt deleniti, excepturi distinctio doloremque laudantium enim libero sint, itaque
-            commodi sequi accusamus reprehenderit.
-            Deserunt aut itaque veniam, quod et vel ut nostrum provident ad repudiandae ab autem porro quaerat ratione
-            minima ipsam reiciendis modi, aspernatur unde hic. Soluta quas quis laboriosam repellat reiciendis.
+            commodi sequi accusamus <i>reprehenderit.
+                Deserunt aut itaque veniam, quod et vel ut nostrum provident ad repudiandae ab autem porro quaerat
+                ratione
+                minima ipsam reiciendis modi</i>, aspernatur unde hic. Soluta quas quis laboriosam repellat reiciendis.
             Ad nobis at modi atque quis voluptas eum blanditiis, architecto beatae autem, magnam provident minima nulla
             hic dolore aspernatur voluptatibus cumque. Accusantium molestias, voluptas accusamus eveniet assumenda unde
             beatae et.
@@ -167,7 +166,7 @@
                 pariatur veritatis quibusdam eveniet.
                 Similique provident deserunt id vel cum voluptatibus voluptatem velit quas dolor reiciendis excepturi in
                 repellat odio, officiis laboriosam dolore suscipit eius eaque ipsum nihil deleniti unde amet
-                consequatur? Praesentium, cum.
+                consequatur? Praesentium, </i>cum.<i>
                 Eum doloremque consectetur recusandae id corporis vitae, vero ullam reiciendis illo cupiditate aut sequi
                 saepe, nihil necessitatibus, adipisci est? Porro pariatur laborum, cupiditate quos provident iusto odit
                 illo ipsam quo.
@@ -194,15 +193,11 @@
                 magnam ipsam quam!
             </i>
         </p>
-
-
-
     </main>
     <footer>
         <a href="/contacts/">Поддержка</a>
         <a href="/legal/">Правовая информация</a>
     </footer>
-
 </body>
 
 </html>
