--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -5,32 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="gerb-of-Russia.png" image="/x-icon">
+    <link rel="stylesheet" href="/political-na-postsovet-space/style.css">
+    <link rel="shortcut icon" href="/political-na-postsovet-space/gerb-of-Russia.png" image="/x-icon">
+    
     <title>Государственная символика | Российская Федерация</title>
 
 </head>
 
 <body>
     <header>
-        <a href="/">Постсоветское пространоство</a>
-        <a href="#">Последние новости</a>
-        <a href="/country/" id="id">Страны</a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространоство</a>
+        <a href="/political-na-postsovet-space/">Последние новости</a>
+        <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
-            <a href="/country/azerbaijan/">Азербайджан</a>
-            <a href="/country/armenia/">Армения</a>
-            <a href="/country/belarus/">Беларусь</a>
-            <a href="/country/kazakhstan/">Казахстан</a>
-            <a href="/country/russia/" id="id">Российская Федерация</a>
-            <a href="/country/ukraine/">Украина</a>
-            <a href="/country/abkhazia/">Абхазия</a>
-            <a href="/country/south-ossetia/">Южная Осетия</a>
-            <a href="/country/dni/">ДНР</a>
-            <a href="/country/lnr/">ЛНР</a>
+            <a href="/political-na-postsovet-space/country/azerbaijan/">Азербайджан</a>
+            <a href="/political-na-postsovet-space/country/armenia/">Армения</a>
+            <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
+            <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a>
+            <a href="/political-na-postsovet-space/country/russia/" id="id">Российская Федерация</a>
+            <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
+            <a href="/political-na-postsovet-space/country/abkhazia/">Абхазия</a>
+            <a href="/political-na-postsovet-space/country/south-ossetia/">Южная Осетия</a>
+            <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
+            <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
         <div id="nav-country">
-            <a href="/country/russia/">Основная информация</a>
-            <a href="/country/russia/gos-simvolika/" id="id">Государственная символика</a>
+            <a href="/political-na-postsovet-space/country/russia/">Основная информация</a>
+            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/" id="id">Государственная символика</a>
         </div>
     </header>
     <main>
@@ -40,7 +41,7 @@
         <p>
             Государственный герб Российской Федерации представляет собой четырёхугольный, с закруглёнными нижними
             углами, заострённый в оконечности красный геральдический щит с золотым двуглавым орлом, поднявшим вверх
-            расправленные крылья. <img src="/country/russia/gos-simvolika/gerb-of-Russia.png"> Орёл увенчан двумя малыми
+            расправленные крылья. <img src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"> Орёл увенчан двумя малыми
             коронами и — над ними — одной большой короной, соединёнными
             лентой. В правой лапе орла — скипетр, в левой — держава. На груди орла, в красном щите, — серебряный всадник
             в синем плаще на серебряном коне, поражающий серебряным копьём чёрного, опрокинутого навзничь и попранного
@@ -62,7 +63,7 @@
         </p>
         <p>
             Флаг России описан как «прямоугольное полотнище из трёх равновеликих горизонтальных полос: верхней — белого,
-            средней — синего и нижней — красного цвета. <img src="/country/russia/gos-simvolika/flag-of-Russia.png">
+            средней — синего и нижней — красного цвета. <img src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png">
             Отношение ширины флага к его длине — 2:3» . Оттенки цветов не
             были установлены, потому что Федеральный конституционный закон о Государственном флаге Российской
             Федерации оттенки цветов не устанавливаеть.
@@ -141,22 +142,22 @@
         <br>
         <h3>Гимн России инструментал</h3>
         <audio controls loop>
-            <source src="/country/russia/gos-simvolika/anthem-instrumental.mp3" type="audio/mpeg">
+            <source src="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3" type="audio/mpeg">
             Тег audio не поддерживается вашим браузером.
-            <a href="/country/russia/gos-simvolika/anthem-instrumental.mp3">Скачайте музыку</a>.
+            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3">Скачайте музыку</a>.
         </audio>
         <br>
         <br>
         <h3>Гимн России хор</h3>
         <audio controls>
-            <source src="/country/russia/gos-simvolika/anthem-choir.mp3" type="audio/mpeg">
+            <source src="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-choir.mp3" type="audio/mpeg">
             Тег audio не поддерживается вашим браузером.
-            <a href="/country/russia/gos-simvolika/anthem-choir.mp3">Скачайте музыку</a>.
+            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-choir.mp3">Скачайте музыку</a>.
         </audio>
     </main>
     <footer>
-        <a href="/contacts/">Поддержка</a>
-        <a href="/legal/">Правовая информация</a>
+        <a href="/political-na-postsovet-space/contacts/">Поддержка</a>
+        <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
     </footer>
 
 </body>
