--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <header>
-        <a href="/">Постсоветское пространоство</a>
+        <a href="/political-na-postsovet-space">Постсоветское пространоство</a>
         <a href="#">Последние новости</a>
-        <a href="/country/">Страны</a>
+        <a href="/political-na-postsovet-space">Страны</a>
     </header>
     <main>
 
@@ -322,8 +322,8 @@
 
     </main>
     <footer>
-        <a href="/contacts/">Поддержка</a>
-        <a href="/legal/">Правовая информация</a>
+        <a href="/political-na-postsovet-space/contacts/">Поддержка</a>
+        <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
     </footer>
 
 </body>
