--- a/country/ukraine/index.html
+++ b/country/ukraine/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/style.css">
     <link rel="shortcut icon" href="/country/ukraine/gerb-of-ukraine.png" image="/x-icon">
     <title>Украина</title>
 
@@ -30,8 +30,10 @@
 
         </div>
         <div id="nav-country">
-            <a href="/country/ukraine/" id="id">Основная информация</a>
-            <a href="/country/ukraine/gos-simvolika/">Государственная символика</a>
+
+            <a href="/political-na-postsovet-space/country/ukraine/" id="id">Основная информация</a>
+
+            <a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/">Государственная символика</a>
         </div>
     </header>
     <main>
@@ -339,8 +341,8 @@
 
     </main>
     <footer>
-        <a href="/contacts/">Поддержка</a>
-        <a href="/legal/">Правовая информация</a>
+        <a href="/political-na-postsovet-space/contacts/">Поддержка</a>
+        <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
     </footer>
 
 </body>
